deploy: e0aa5e609e6faab9e316d2bcdc39d1f173407819

--- a/11-create-a-signature-by-downloading-and-sketching-a-genome-sequence/index.html
+++ b/11-create-a-signature-by-downloading-and-sketching-a-genome-sequence/index.html
@@ -93,7 +93,7 @@ priority = 2 # default priority 999 => in with all the rest :). 1 pushes it to t
 -->
 
 <p>first, download a genome:</p>
-<pre><code class="language-shell">curl -JLO  https://osf.io/bjh2y/download
+<pre><code class="language-shell">curl -JLO  [https://osf.io/bjh2y/download](https://osf.io/bjh2y/download)
 </code></pre>
 <p>This will create a 1.4MB file <code>GCF_000005845.2_ASM584v2_genomic.fna.gz</code> containing an <em>E. coli</em> K-12 genome for strain MG1655 (see <a href="https://www.ncbi.nlm.nih.gov/data-hub/genome/GCF_000005845.2/">Genbank entry</a>).</p>
 <p>Next, calculate the signature using <code>sourmash sketch dna</code>:</p>
