--- a/4-use-picklists-and-manifests-to-work-with-a-small-subset-of-a-large-database/index.html
+++ b/4-use-picklists-and-manifests-to-work-with-a-small-subset-of-a-large-database/index.html
@@ -99,7 +99,7 @@
 <p>Suppose you want to search, compare, or otherwise work with only a small set of genomes from GTDB - perhaps only the ones with "Shewanella" in their name.</p>
 <p>sourmash makes this easy!</p>
 <p>Start by downloading the GTDB genomic representatives database from <a href="https://sourmash.readthedocs.io/en/latest/databases.html">the prepared databases</a>.</p>
-<pre><code class="language-shell">curl -JLO https://osf.io/3a6gn/download
+<pre><code class="language-shell">curl -JLO [https://osf.io/3a6gn/download](https://osf.io/3a6gn/download)
 </code></pre>
 <p>This will download a 1.7 GB file named <code>gtdb-rs207.genomic-reps.dna.k31.zip</code>.</p>
 <h2 id="extract-a-manifest">Extract a manifest</h2>
