--- a/6-create-a-conda-environment-with-the-latest-version-of-sourmash/index.html
+++ b/6-create-a-conda-environment-with-the-latest-version-of-sourmash/index.html
@@ -95,7 +95,7 @@ dependencies:
   - rust
   - pip
   - pip:
-    - git+https://github.com/sourmash-bio/sourmash@latest
+    - git+[https://github.com/sourmash-bio/sourmash@latest](https://github.com/sourmash-bio/sourmash@latest)
 </code></pre>
 <p>and then run:</p>
 <pre><code class="language-shell">conda env create -n sourmash-latest -f sourmash-latest.yml
