--- a/l-intermediate/index.html
+++ b/l-intermediate/index.html
@@ -78,6 +78,7 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="category-intermediate-examples">Category: intermediate examples</h1>
+<p><a href="../22-detect-potential-contaminants-in-unassembled-and-uncorrected-pacbio-sequencing-data/">Example: detect potential contaminants in unassembled and uncorrected PacBio sequencing data</a></p>
 <p><a href="../15-estimate-how-much-of-a-metagenome-sample-can-be-mapped-to-reference-genomes/">Example: estimate how much of a metagenome sample can be mapped to reference genomes</a></p>
 <p><a href="../4-use-picklists-and-manifests-to-work-with-a-small-subset-of-a-large-database/">Example: use picklists and manifests to work with a small subset of a large database</a></p></div>
             </div>
