deploy: e0aa5e609e6faab9e316d2bcdc39d1f173407819

--- a/l-databases/index.html
+++ b/l-databases/index.html
@@ -78,7 +78,7 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="category-creating-databases">Category: creating databases</h1>
-<p><a href="../7-use-genomeupdater.sh-and-sketch-fromfile-to-build-a-custom-database/">Example: use <code>genome_updater.sh</code> and <code>sketch fromfile</code> to build a custom database</a></p></div>
+<p><a href="../7-use-genomeupdater.sh-and-sketch-fromfile-to-build-a-custom-database-from-ncbi/">Example: use <code>genome_updater.sh</code> and <code>sketch fromfile</code> to build a custom database from NCBI</a></p></div>
             </div>
         </div>
 
