--- a/examples/index.html
+++ b/examples/index.html
@@ -103,7 +103,7 @@
 <p><a href="../1-download-sketch-and-search-a-collection-of-fasta-files/">Example: download, sketch, and search a collection of FASTA files</a></p>
 <p><a href="../15-estimate-how-much-of-a-metagenome-sample-can-be-mapped-to-reference-genomes/">Example: estimate how much of a metagenome sample can be mapped to reference genomes</a></p>
 <p><a href="../5-search-collection-manifests-directly/">Example: search collection manifests directly</a></p>
-<p><a href="../7-use-genomeupdater.sh-and-sketch-fromfile-to-build-a-custom-database/">Example: use <code>genome_updater.sh</code> and <code>sketch fromfile</code> to build a custom database</a></p>
+<p><a href="../7-use-genomeupdater.sh-and-sketch-fromfile-to-build-a-custom-database-from-ncbi/">Example: use <code>genome_updater.sh</code> and <code>sketch fromfile</code> to build a custom database from NCBI</a></p>
 <p><a href="../3-use-sourmash-tax-to-classify-a-metagenome/">Example: use <code>sourmash tax</code> to classify a metagenome</a></p>
 <p><a href="../4-use-picklists-and-manifests-to-work-with-a-small-subset-of-a-large-database/">Example: use picklists and manifests to work with a small subset of a large database</a></p></div>
             </div>
