deploy: e0aa5e609e6faab9e316d2bcdc39d1f173407819

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <body>
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="/sourmash-examples/.">sourmash examples</a>
+                <a class="navbar-brand" href="/sourmash-examples/index.html">sourmash examples</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -34,13 +34,13 @@
                         <!-- Main navigation -->
                         <ul class="nav navbar-nav">
                             <li class="navitem">
-                                <a href="/sourmash-examples/." class="nav-link">Home</a>
+                                <a href="/sourmash-examples/index.html" class="nav-link">Home</a>
                             </li>
                             <li class="navitem">
-                                <a href="/sourmash-examples/examples/" class="nav-link">All examples</a>
+                                <a href="/sourmash-examples/examples.html" class="nav-link">All examples</a>
                             </li>
                             <li class="navitem">
-                                <a href="/sourmash-examples/labels/" class="nav-link">All categories</a>
+                                <a href="/sourmash-examples/labels.html" class="nav-link">All categories</a>
                             </li>
                         </ul>
 
